--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ body {
     background-size: 40rem;
     align-items: center;
     justify-content: center;
-
 }
 
 .card_container {
@@ -147,4 +146,17 @@ body {
 
 
 /* MEDIA QUERIES */
-@media (min-width:1000px) {}
+@media (min-width:1000px) {
+
+    /* GENERALS */
+    body {
+        background-position: 7rem -50rem;
+        background-size: 90rem;
+    }
+
+    /* CONTAINERS */
+    .container {
+        background-position: 95rem 45rem;
+        background-size: 90rem;
+    }
+}
