--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* GLOBAL */
 * {
-    padding: 0rem;
-    margin: 0rem;
+    /* padding: 0%; */
+    /* margin: 0%; */
 }
 
 :root {
@@ -22,7 +22,7 @@ body {
     font-size: 16px;
     font-family: 'Kumbh Sans', sans-serif;
     background-color: var(--color_dark_cyan);
-    background-image: url(/images/bg-pattern-top.svg);
+    background-image: url(../images/bg-pattern-top.svg);
     background-repeat: no-repeat;
     background-position: -17rem -17rem;
     background-size: 40rem;
@@ -44,7 +44,7 @@ body {
 .container {
     width: 100%;
     display: flex;
-    background-image: url(/images/bg-pattern-bottom.svg);
+    background-image: url(../images/bg-pattern-bottom.svg);
     background-repeat: no-repeat;
     background-position: 17rem 57rem;
     background-size: 40rem;
